# bright

./: .gitignore  BuildEngine.bat  CMakeLists.txt  COPYRIGHT  LICENSE.txt  README.md  clear.bat  codestyle.md  main.cpp  naveditor.ini
Drivers/: HardwareDevice.h  VulkanContext.h
Engine/Include/Bright/: Error.h  Typedefs.h
Engine/Modules/NavUI/: CMakeLists.txt  Navui.cpp
Engine/Resources/: naveditor.ini
Engine/Source/: Main.cpp
Engine/Source/Drivers/: RenderDevice.cpp  RenderDevice.h  RenderDeviceContext.cpp  RenderDeviceContext.h  VulkanUtils.h
Engine/Source/Editor/: README
Engine/Source/NavUI/: CMakeLists.txt  NavUI.cpp
Engine/Source/Runtime/: CMakeLists.txt  Main.cpp
Engine/Source/Runtime/Drivers/: RenderDevice.cpp  RenderDevice.h  RenderDeviceContext.cpp  RenderDeviceContext.h  VulkanUtils.h
Engine/Source/Runtime/Include/RT/Renderer/: RenderingDisplay.h
Engine/Source/Runtime/Misc/: README
Engine/Source/Runtime/RT/Drivers/: RenderDevice.cpp
Engine/Source/Runtime/RT/Renderer/: RenderingDisplay.cpp  RenderingDisplay.h
Engine/Source/Runtime/RT/Win32/: RenderDeviceContextWin32.cpp  RenderDeviceContextWin32.h
Engine/Source/Runtime/RT/Window/: Window.cpp
Engine/Source/Runtime/Renderer/: RenderDisplay.cpp  RenderDisplay.h  RenderScreen.cpp  RenderScreen.h  RenderingDisplay.cpp  RenderingDisplay.h
Engine/Source/Runtime/Rendering/: RenderingScreen.cpp  RenderingScreen.h
Engine/Source/Runtime/Shaders/: README
Engine/Source/Runtime/Win32/: RenderDeviceContextWin32.cpp  RenderDeviceContextWin32.h
Engine/Source/Runtime/Window/: Window.cpp  Window.h
Engine/Source/Sandbox/: CMakeLists.txt  Sandbox.cpp
Engine/Source/Win32/: RenderDeviceContextWin32.cpp  RenderDeviceContextWin32.h
Source/Engine/: PortableMain.cpp
Temporary/: .mailmap  CMakeLists.txt  main.cpp
Temporary/drivers/: render_device.h  render_device_context.cpp  render_device_context.h  vulkan_utils.h
Temporary/editor/: naveditor.h
Temporary/misc/: debugger.cpp  shader_compile.h
Temporary/navui/: CMakeLists.txt  navui.cpp
Temporary/platform/: window.h
Temporary/rendering/: render_object.h  renderer3d.h  renderer_scene.h  rendering_coordinate_axis.cpp  rendering_directional_light.cpp  rendering_directional_light.h  rendering_graphics.cpp  rendering_scene.h  rendering_screen.cpp  rendering_screen.h  rendering_sky_sphere.cpp
Temporary/shader/: coordaxis.vert  graph.frag  sky_sphere.frag  sky_sphere.vert
Window/: VulkanContextWin.h
drivers/: hardware.cpp  hardware.h  render_device.cpp  render_device.h  render_device_context.cpp  render_device_context.h  rendering_context_driver_vulkan.cpp  rendering_context_driver_vulkan.h  rendering_device_driver_vulkan.cpp  rendering_device_driver_vulkan.h  vulkan_context.cpp  vulkan_context.h  vulkan_utils.h
editor/: camera_editor_ui.h  debugger_editor_ui.cpp  debugger_editor_ui.h  naveditor.cpp  naveditor.h  scene_editor_ui.h  viewport_editor_ui.h
editor/components/: camera.h  debugger.h  scene.h  scene_node_browser.h  settings.h
event/: eventdefs.h  inpdefs.h
include/bright/: debugger.h  ioutils.h  math.h  properties.h
include/copilot/: debugger.h  error.h  ioutils.h  math.h  memalloc.h  properties.h  typealias.h  typedefs.h
include/engine/: error.h  typealias.h
misc/: debugger.cpp  rendering_device_driver_vulkan.cpp  rendering_device_driver_vulkan.h  shader_compile.h  vk_mem_alloc.cpp  vulkan_context.cpp  vulkan_context.h  vulkan_context_win32.cpp  vulkan_context_win32.h
model/: obj.cpp  obj.h
modules/: obj.cpp  obj.h
navui/: CMakeLists.txt  navui.cpp
navui/include/: navui.h
navui/include/navui/: navui.h
navui/zmo/: ImGuizmo.cpp
platform/: window.cpp  window.h
platform/win32/: render_device_context_win32.cpp  render_device_context_win32.h  rendering_context_driver_vulkan_win32.cpp  rendering_context_driver_vulkan_win32.h
render/: camera.h  canvas.cpp  canvas.h  editor.cpp  editor.h  render_canvas.cpp  render_canvas.h  render_editor.cpp  render_editor.h  render_object.cpp  render_object.h  renderer_canvas.cpp  renderer_canvas.h  renderer_editor.cpp  renderer_editor.h  renderer_graph.cpp  renderer_graph.h  renderer_graphics.cpp  renderer_graphics.h  renderer_imgui.cpp  renderer_imgui.h  renderer_screen.cpp  renderer_screen.h  screen.cpp  screen.h
render/camera/: camera.cpp  camera.h  controller.cpp  controller.h  event.h  game_play_camera.cpp  game_play_camera.h  perspective_camera.cpp  perspective_camera.h  projection_camera.cpp  projection_camera.h  track_ball_camera_controller.cpp  track_ball_camera_controller.h
render/editor/: editor_render_device.cpp  editor_render_device.h
render/gui/: editor.cpp  editor.h  renderer_viewport.h
rendering/: render_object.cpp  render_object.h  renderer.cpp  renderer.h  renderer3d.cpp  renderer_axis_line.cpp  renderer_axis_line.h  renderer_canvas.cpp  renderer_canvas.h  renderer_graphics.cpp  renderer_imgui.cpp  renderer_imgui.h  renderer_scene.cpp  renderer_scene.h  rendering_axis_line.cpp  rendering_axis_line.h  rendering_coordinate_axis.cpp  rendering_coordinate_axis.h  rendering_directional_light.cpp  rendering_directional_light.h  rendering_graphics.cpp  rendering_graphics.h  rendering_scene.cpp  rendering_scene.h  rendering_screen.cpp  rendering_screen.h  rendering_sky_sphere.cpp  rendering_sky_sphere.h  scene_render_data.cpp  scene_render_data.h
rendering/camera/: camera.cpp  camera.h  controller.cpp  controller.h  game_player_camera_controller.cpp  game_player_camera_controller.h  projection_camera.cpp  projection_camera.h
rendering/gui/: renderer_viewport.cpp  renderer_viewport.h
rendering/physical3d/: physical_3d_rigid_body.cpp  physical_3d_rigid_body.h  physical_3d_space.h  physical_3d_world.h
shader/: axis_line_fragment.glsl  axis_line_vertex.glsl  compile  compile.bat  coordaxis.vert  fragment.glsl  fragment.glsl.spv  graph.frag  graph.vert  graph_fragment.glsl  graph_vertex.glsl  light.h  sky_sphere.frag  sky_sphere.vert  vertex.glsl  vertex.glsl.spv
utils/: fps_counter.h
window/: vulkan_context_win32.cpp  vulkan_context_win32.h
(+16 files in other folders)
